# ChangeLog for dev-ruby/newrelic_rpm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2010; Hans de Graaff <graaff@gentoo.org>
  -newrelic_rpm-2.9.4.ebuild, -newrelic_rpm-2.9.9.ebuild,
  files/newrelic_rpm-2.9.9-no-webrick.patch, -newrelic_rpm-2.10.8.ebuild,
  files/newrelic_rpm-2.10.8-no-webrick.patch, metadata.xml:
  Remove old versions.

*newrelic_rpm-2.10.8-r1 (21 May 2010)

  21 May 2010; Hans de Graaff <graaff@gentoo.org>
  +newrelic_rpm-2.10.8-r1.ebuild,
  +files/newrelic_rpm-2.10.8-no-webrick.patch:
  Patch out webrick detection because it generates false positives.

*newrelic_rpm-2.10.8 (06 Apr 2010)

  06 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +newrelic_rpm-2.10.8.ebuild:
  Version bump.

  16 Jan 2010; Hans de Graaff <graaff@gentoo.org> newrelic_rpm-2.9.9.ebuild,
  +files/newrelic_rpm-2.9.9-no-webrick.patch:
  Remove webrick detection, it is wrong too often.

*newrelic_rpm-2.9.9 (15 Jan 2010)

  15 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +newrelic_rpm-2.9.9.ebuild:
  Version bump. Convert to ruby-fakegem.

*newrelic_rpm-2.9.4 (08 Sep 2009)

  08 Sep 2009; Hans de Graaff <graaff@gentoo.org>
  +newrelic_rpm-2.9.4.ebuild, +metadata.xml:
  Initial import.
