@@ -4,13 +4,15 @@ Hash: SHA256
 AUX newrelic_rpm-2.10.8-no-webrick.patch 682 RMD160 3a7f7cc82c58b1786f64d89bebcaac1bbce27985 SHA1 88618f3d1941455b2d5639b5323ea62425ad3327 SHA256 626a62453edbc2f03f838f6d1cf08754ae0a680928600be5daa5f8e049c5bd6b
 AUX newrelic_rpm-2.9.9-no-webrick.patch 768 RMD160 5b98cc31b9c10a5ff736450c24731271da5f7ad0 SHA1 a450a3e6e3031ddb48f47aaa894a8d5c440da79e SHA256 757967a408b76510e545cdb1f4ae9b232d0e44c61645ceae465150b52fb859d9
 DIST newrelic_rpm-2.10.8.gem 471040 RMD160 0a00bd19161310bd181a938c206f5f5d4c192614 SHA1 257e961b880feef91b3ee81ee1b5714d52e13142 SHA256 804e6cec7adc6b6e12e979851eeef18c5a8ca67957e539131ef3832dc500829b
+DIST newrelic_rpm-2.12.3.gem 324608 RMD160 54616a03cfe2e38a83cc8e3b3ac30845d9e3ba4c SHA1 692959b0d6876cb7a0e1431e47025a7f9a862078 SHA256 c39e56ef57fa86153504ad79d838772753756eb72116081700fdab17cd6b33cf
 EBUILD newrelic_rpm-2.10.8-r1.ebuild 735 RMD160 a1ee0ece5091ad5ee376bbcddab39ac44726e3c7 SHA1 8f509ae0ae64d8829fc144f822cb182696f01760 SHA256 7441f7e8c9b5495732bc4cd3784792f352d499e63e84a64d4c67684e66cda401
-MISC ChangeLog 1242 RMD160 850c8e9805efa62d533f1b249166a6f26e3e92e5 SHA1 229b4f7c493b6d5ea97ee133abe25caa37c6a79f SHA256 61abf9125307fbf2550e09657fbc6bc336bf462a9aef67951028f5c0337f3539
+EBUILD newrelic_rpm-2.12.3.ebuild 748 RMD160 2273e96c59772db503453d1d53ebacbb85806ea1 SHA1 ce4817af377d8cdee441c28ccd3af74a7b70b44d SHA256 cd66df8e2509163201d5b2e43219380e5597a260e963b0608dc276bc46f720e0
+MISC ChangeLog 1376 RMD160 6f3e1c46c13ee210526326d5a8d1e341e7f0a868 SHA1 60ecd832c89d613da92bbc60166dc813c5014bd0 SHA256 0fce23891b7f0476b7e24c1ebf57fe0a93a211b212de4a402cacce8e6d03f453
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iF4EAREIAAYFAkw0QxcACgkQZihJkut28Su1eAEAlY75g1r24k7YMEGNNKRnRSXa
-r9nM+gSMDIGOy5q02ckA/2CHSKYpVneHQGJfyT+84TQ3lcPO4ZYoEDrUzbGajmoL
-=mLpS
+iF4EAREIAAYFAkw0RCwACgkQZihJkut28SsMIgD9G4UoFxbh465dBT3xlvZMI9Pl
+cdnQB0zZ+e1X+ebi6BMBAMli4dJP2bE6WazyC7vRsiGcxF1iJFUBsbub+1+xM6h8
+=D/QF
 -----END PGP SIGNATURE-----
