@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*newrelic_rpm-2.12.3 (07 Jul 2010)
+
+  07 Jul 2010; Hans de Graaff <graaff@gentoo.org>
+  +newrelic_rpm-2.12.3.ebuild:
+  Version bump.
+
   07 Jul 2010; Hans de Graaff <graaff@gentoo.org>
   -newrelic_rpm-2.9.4.ebuild, -newrelic_rpm-2.9.9.ebuild,
   files/newrelic_rpm-2.9.9-no-webrick.patch, -newrelic_rpm-2.10.8.ebuild,
